<resources>
    <string name="app_name">Program8</string>
    <string name="appTitle">CALL AND SAVE APP</string>
    <string name="five">5</string>
    <string name="zero">0</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="three">3</string>
    <string name="delete">DEL</string>
    <string name="nine">9</string>
    <string name="two">2</string>
    <string name="hash">#</string>
    <string name="call">CALL</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="star">*</string>
    <string name="save">SAVE</string>
    <string name="seven">7</string>
</resources>