<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="330dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:text="@string/appTitle"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="277dp"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:maxLength="10"
        android:padding="15dp"
        android:singleLine="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/hash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />

    <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textPhoneNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/hash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />

    <Button
        android:id="@+id/hash"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/hash"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/nine" />


    <Button
        android:id="@+id/call"
        android:layout_width="161dp"
        android:layout_height="70dp"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />

    <Button
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/star"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/save"
        android:layout_width="161dp"
        android:layout_height="70dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/call"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/star"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />
</androidx.constraintlayout.widget.ConstraintLayout>